fix: restore header-level nav and unclipped D/E toggle

--- a/handsontable/src/styles/components/plugins/_nested-headers.scss
+++ b/handsontable/src/styles/components/plugins/_nested-headers.scss
@@ -9,6 +9,7 @@
     thead th.htRowspanHeader {
       height: auto;
       vertical-align: bottom;
+      overflow: visible;
 
       &.ht__active_highlight {
         border-inline-start-width: 1px;
